# fha-federal-courts

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
data/raw/: bulk_fha_cases.jsonl
data/validation/: CODEBOOK.md  SUMMARY.json  casemix_summary.json  circuit_casemix.csv  era_stability.csv  excluded_non_nos443.jsonl  feii_leave_one_out.csv  gold_human_codings.json  gold_machine_labels.csv  goldset_metrics.json  goldset_precision_recall.csv  llm_labels_3pass.json  llm_majority_votes.json  negation_sensitivity.json  random_sample_index.json  regime_top_terms.csv
docs/: LLM_BASELINE.md
scripts/: analyze_prevalence.py  analyze_real.py  bulk_ingest.py  circuit_split.py  collect_live.py  district_demo.py  draw_random_sample.py  fetch_bulk_text.py  fetch_bulk_text_from_dump.py  make_paper_assets.py  normalize_frozen_corpus.py  plot_additional.py  plot_schelling.py  run_pipeline.py  run_schelling.py  score_goldset.py  score_llm_baseline.py  validation_robustness.py
src/fha/: __init__.py  bulkdata.py  circuits.py  classify.py  config.py  courtlistener.py  doctrine.py  econometrics.py  extract.py  feii.py  housing.py  llm_baseline.py  pipeline.py  prevalence.py  reference.py  reports.py  robustness.py  schelling.py  synth.py
tests/: test_circuits.py  test_llm_baseline.py  test_pipeline.py  test_schelling.py
