[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fha-federal-courts"
version = "0.1.0"
description = "Reproducible Fair Housing Act district-court corpus and measurement pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["numpy", "pandas", "scipy", "scikit-learn", "statsmodels", "pillow"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["fha*"]
